# CRadpy

./: .gitmodules  CMakeLists.txt  compile_flags.txt
doc/: BlackBody.md
include/: InverseCompton.h  PhotonAbsorption.h  RadData.h  Radiation.h  Synchrotron.h  Utils.h  constants.h  integration.h
python/: CMakeLists.txt  constants_bind.cpp  radiation_bind.cpp  test.py
src/: CMakeLists.txt  InverseCompton.cpp  PhotonAbsorption.cpp  RadData.cpp  Radiation.cpp  Synchrotron.cpp  Utils.cpp  integration.cpp  test.cxx
test/: CMakeLists.txt  Utils_test.cpp
test/physics_test/: test.py  test_blackbody.ipynb  test_ic_syn.ipynb  test_syn_approx_protonsyn.ipynb
